CRUD de meta